--- a/src/templates/movies/snippet/card.html
+++ b/src/templates/movies/snippet/card.html
@@ -1,6 +1,11 @@
+{% load get_dict_val %}
+
+{% with my_ratings|get_dict_val:object.id as current_rating %}
 <div class="card shadow-sm">
   <div class="card-body">
-    <title>{{ object.title }} <small>{{ object.id }}</small></title>
+    <title style="display: block;">{{ object.title }} 
+      <small>{{ object.id }}</small>
+    </title>
     <p class="card-text">{{ object.overview }}</p>
     <div class="d-flex justify-content-between align-items-center">
       <div class="btn-group">
@@ -11,22 +16,25 @@
       </div>
 
       <div>
-
         <select class="form-control">
           {% for choice in rating_choices %}
             {% if choice is None %}
               <option disabled selected>Pick a rating</option>
             {% else %}
-              <option value="{{ choice }}">{{ choice }}</option>
+              <option 
+                value="{{ choice }}"
+                {% if current_rating == choice %}selected{% endif %}
+              >{{ choice }}</option>
             {% endif %}
           {% endfor %}
         </select>
         {% if object.rating_avg %}
-        <small class="text-mute">
-          {{ object.rating_avg }} ({{ object.rating_count }})
-        </small>
+          <small class="text-mute">
+            {{ object.rating_avg }} ({{ object.rating_count }})
+          </small>
         {% endif %}
       </div>
     </div>
   </div>
 </div>
+{% endwith %}
