--- a/src/templates/movies/movie_list.html
+++ b/src/templates/movies/movie_list.html
@@ -1,11 +1,24 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-  {% for object in object_list %}
-    <div class="col">
-      {% include 'movies/snippet/card.html' with object=object %}
-    </div>
-  {% endfor %}
+
+<div class="row my-2">
+  <div class="col-md-2 ms-0">
+    <select name="sort" class="form-control" hx-get="/movies/"
+      hx-target="#target-list-change"
+    >
+      {% for key, value in sorting_choices.items %}
+        <option {% if request.session.movie_sort_order == value %}selected{% endif %} value="{{ value }}">{{ key|title }}</option>
+      {% endfor %}
+    </select> 
+
+  </div>
+</div>
+
+
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3"
+  id="target-list-change"
+>
+  {% include 'movies/snippet/list.html' with object_list=object_list%}
   </div>
 {% endblock %}
