--- a/src/templates/movies/snippet/card.html
+++ b/src/templates/movies/snippet/card.html
@@ -3,9 +3,10 @@
 {% with my_ratings|get_dict_val:object.id as current_rating %}
 <div class="card shadow-sm">
   <div class="card-body">
-    <title style="display: block;">{{ object.title }} 
-      <small>{{ object.id }}</small>
-    </title>
+    <h3>{{ object.title }} 
+      {% if object.release_date %}<small>({{ object.release_date.year }})</small>{% endif %}
+    </h3>
+    <strong>{{ object.id }}</strong>
     <p class="card-text">{{ object.overview }}</p>
     <div class="d-flex justify-content-between align-items-center">
       <div class="btn-group">
