--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -11,7 +11,8 @@
   
     <script src="https://unpkg.com/htmx.org@1.9.5" integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
+
     {% include 'navbar.html' %}
     {% include 'messages.html' %}
     {% block content %}
