--- a/src/templates/movies/snippet/card.html
+++ b/src/templates/movies/snippet/card.html
@@ -17,18 +17,8 @@
       </div>
 
       <div>
-        <select class="form-control">
-          {% for choice in rating_choices %}
-            {% if choice is None %}
-              <option disabled selected>Pick a rating</option>
-            {% else %}
-              <option 
-                value="{{ choice }}"
-                {% if current_rating == choice %}selected{% endif %}
-              >{{ choice }}</option>
-            {% endif %}
-          {% endfor %}
-        </select>
+        {% include 'ratings/snippet/rating-choices.html' with object_id=object.id current_rating=current_rating %}
+
         {% if object.rating_avg %}
           <small class="text-mute">
             {{ object.rating_avg }} ({{ object.rating_count }})
