--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -8,7 +8,19 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" 
+              href="/">Home
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"
+              href="/movies">Movies
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"
+              href="/movies/infinite">Rating
+            </a>
           </li>
         </ul>
         <a class="btn btn-outline-primary" href="/accounts/logout/">{% user_display user %}</a>
