--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -22,6 +22,11 @@
               href="/movies/infinite">Rating
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link"
+              href="/movies/popular">Popular
+            </a>
+          </li>
         </ul>
         <a class="btn btn-outline-primary" href="/accounts/logout/">{% user_display user %}</a>
       </div>
