--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,15 +8,17 @@
     {% endblock %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   
-  
     <script src="https://unpkg.com/htmx.org@1.9.5" integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO" crossorigin="anonymous"></script>
+    
   </head>
   <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
 
     {% include 'navbar.html' %}
-    {% include 'messages.html' %}
-    {% block content %}
-    {% endblock %}
+    <div class="container-fluid">
+      {% include 'messages.html' %}
+      {% block content %}
+      {% endblock %}
+    </div>
 
     {% block extra_body %}
     {% endblock %}
