--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -28,7 +28,11 @@
             </a>
           </li>
         </ul>
-        <a class="btn btn-outline-primary" href="/accounts/logout/">{% user_display user %}</a>
+        {% if user.is_authenticated %}
+          <a class="btn btn-outline-primary" href="/accounts/logout/">{% user_display user %}</a>
+        {% else %}
+          <a class="nav-link" href="/accounts/login">Login </a>
+        {% endif %}
       </div>
     </div>
   </nav>
